--- a/templates/terminal.html
+++ b/templates/terminal.html
@@ -6,7 +6,10 @@
 
 <style type="text/css">
 	body {
-		background-color: #000
+		background-color: #000;
+        font-size:14px;
+        font-family: Courier, monospace;
+
 	}
 	#console {
 		font-family: courier, monospace;
@@ -48,6 +51,18 @@
         font-family: Courier, monospace;
         font-size:14px;
 
+    }
+    li{
+        font-size:14px;
+        font-family: Courier, monospace;
+    }
+    ul{
+        font-size:14px;
+        font-family: Courier, monospace;
+    }
+    td{
+        font-size:14px;
+        font-family: Courier, monospace;
     }
 </style>
 </head>
