--- a/templates/terminal.html
+++ b/templates/terminal.html
@@ -81,6 +81,12 @@
     var counter = 0;
         window.onkeyup = function (e) {
                var key = e.keyCode ? e.keyCode : e.which;
+                if( key == 9){
+                    if ($('#inputfield'+counter.toString()).val() == "l" | "ls"){
+                    $('#inputfield'+counter.toString()).text = "ls";
+                }
+
+                }
                 if (key == 13) {
                     slic = get_snippet($('#inputfield'+counter.toString()).val(), 0, 3);
                     slic2 = get_snippet($('#inputfield'+counter.toString()).val(), 0, 4);
