--- a/templates/terminal.html
+++ b/templates/terminal.html
@@ -82,7 +82,7 @@
         window.onkeyup = function (e) {
                var key = e.keyCode ? e.keyCode : e.which;
                 if( key == 9){
-                    if ($('#inputfield'+counter.toString()).val() == "l" | "ls"){
+                    if ($('#inputfield'+counter.toString()).val() == "l"){
                     $('#inputfield'+counter.toString()).innerHTML = "ls";
                 }
 
