--- a/templates/terminal.html
+++ b/templates/terminal.html
@@ -83,7 +83,7 @@
                var key = e.keyCode ? e.keyCode : e.which;
                 if( key == 9){
                     if ($('#inputfield'+counter.toString()).val() == "l"){
-                    $('#inputfield'+counter.toString()).innerHTML = "ls";
+                    $('#inputfield'+counter.toString()).val('ls');
                 }
 
                 }
