--- a/templates/terminal.html
+++ b/templates/terminal.html
@@ -4,67 +4,7 @@
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
-<style type="text/css">
-	body {
-		background-color: #000;
-        font-size:14px;
-        font-family: Courier, monospace;
-
-	}
-	#console {
-		font-family: courier, monospace;
-		color: #fff;
-		width:750px;
-		margin-left:auto;
-		margin-right:auto;
-		margin-top:100px;
-		font-size:14px;
-	}
-	a {
-		color: #0bc;
-		text-decoration: none;
-	}
-	#a {
-		color: #0f0;
-	}
-	#c {
-		color: #0bc;
-	}
-	#b {
-		color: #ff0096;
-	}
-    #user-caption{
-        color: #ffffff;
-        background-color: #000000;
-        border: None;
-        lighting-color: #fff;
-        outline-color: black;
-        font-size:14px;
-
-    }
-    .cmdline{
-        background-color: black;
-        color: white;
-        border: None;
-        lighting-color: #fff;
-        outline-color: black;
-        font-family: Courier, monospace;
-        font-size:14px;
-
-    }
-    li{
-        font-size:14px;
-        font-family: Courier, monospace;
-    }
-    ul{
-        font-size:14px;
-        font-family: Courier, monospace;
-    }
-    td{
-        font-size:14px;
-        font-family: Courier, monospace;
-    }
-</style>
+<link href="style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 
