--- a/templates/terminal.html
+++ b/templates/terminal.html
@@ -4,7 +4,8 @@
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
-<link href="style.css" type="text/css" rel="stylesheet"/>
+    {% load static %}
+<link href="{% static "style.css" %}" type="text/css" rel="stylesheet" />
 </head>
 <body>
 
