added color to desc

--- a/untitled/static/style.css
+++ b/untitled/static/style.css
@@ -57,3 +57,6 @@ body {
         font-size:16px;
         font-family: Courier, monospace;
     }
+    #orange-color{
+        color: orangered;
+    }
