--- a/untitled/static/style.css
+++ b/untitled/static/style.css
@@ -58,5 +58,5 @@ body {
         font-family: Courier, monospace;
     }
     #orange-color{
-        color: orangered;
+        color:coral;
     }
