--- a/templates/terminal.html
+++ b/templates/terminal.html
@@ -10,7 +10,7 @@
 
 
 
-<div id="console">Welcome to Suraj Pai's personal website. <br><br> <span id="orange-color"> <strong>Suraj Pai is a Machine Learning Enthusiast who loves SVMs and CNNs. He's worked on several data science projects and lusts for more. <br> He's also into Chatbot development, Back-end development, UI design and front-end.</strong></span><br> <br>Type "help" to find out more about Suraj.<br> If you're not used to a terminal environment, click here for to switch to a :<br> <strong><em> <a href="http://surajpairesume.weebly.com/">GUI Webpage</a></em></strong><br>You can also check Suraj's <a href="https://www.linkedin.com/in/surajpaib/"> LinkedIn </a><br><br><br>
+<div id="console">Welcome to Suraj Pai's personal website. <br><br> <span id="orange-color"> <strong>Suraj Pai is a Machine Learning Enthusiast who loves SVMs and CNNs. He's worked on several data science projects and lusts for more. <br> He's also into Chatbot development, Back-end development, UI design and front-end.</strong></span><br> <br>Type "help" to find out more about Suraj.<br><br> If you're not used to a terminal environment, click here for to switch to a :<br> <strong><em> <a href="http://surajpairesume.weebly.com/">GUI Webpage</a></em></strong><br>You can also check Suraj's <a href="https://www.linkedin.com/in/surajpaib/"> LinkedIn </a><br><br><br>
     <table class="inputtable"><tbody><tr><td><div id="a">surajpai@root:</div></td><td class="inputtd"><input id="inputfield0" name="q" type="text" class="cmdline" autocomplete="off" value=''/></td></tr></tbody></table>
 </div>
 <script type="text/javascript" src="{% static "script.js" %}"></script>
