changed color and history

--- a/untitled/static/style.css
+++ b/untitled/static/style.css
@@ -58,9 +58,9 @@ body {
         font-family: Courier, monospace;
     }
     #orange-color{
-        color:coral;
+        color:blanchedalmond;
     }
     #headline{
         font-style: oblique;
-        color: blanchedalmond;
+        color: gold;
     }
