--- a/untitled/static/style.css
+++ b/untitled/static/style.css
@@ -64,3 +64,7 @@ body {
         font-style: oblique;
         color: gold;
     }
+    #sub-headline{
+        font-style: oblique;
+        color: lime;
+    }
