Fix for demo django format

--- a/untitled/templates/demo/index.html
+++ b/untitled/templates/demo/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
+    <link href="{%  static 'demo/style.css' %}" type="text/css" rel="stylesheet">
+        <link href="{%  static 'demo/bootstrap-reboot.min.css' %}" type="text/css" rel="stylesheet">
+
 </head>
 <body>
 <center>
-	<a href="video.html">View Canny Detector</a>
+	<a href="/canny">View Canny Detector</a>
 </center>		
 
 </body>
