Fix load static issue

--- a/untitled/templates/demo/index.html
+++ b/untitled/templates/demo/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+        {% load static %}
+
     <link href="{%  static 'demo/style.css' %}" type="text/css" rel="stylesheet">
         <link href="{%  static 'demo/bootstrap-reboot.min.css' %}" type="text/css" rel="stylesheet">
 
