--- a/untitled/templates/demo/video.html
+++ b/untitled/templates/demo/video.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Video Capture Example</title>
+        {% load static %}
+
 <link href="{% static 'demo/bootstrap-reboot.min.css' %}" rel="stylesheet" type="text/css" />
 <link href="{% static 'demo/style.css' %}" rel="stylesheet" type="text/css" />
 
