--- a/untitled/templates/demo/index.html
+++ b/untitled/templates/demo/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <center>
-	<a href="/canny">View Canny Detector</a>
+	<a href="/demo/canny">View Canny Detector</a>
 </center>		
 
 </body>
