--- a/untitled/static/css/resume.css
+++ b/untitled/static/css/resume.css
@@ -131,17 +131,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: dodgerblue !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: dodgerblue !important;
 }
 
 a {
-  color: #BD5D38;
+  color: dodgerblue;
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: royalblue;
 }
