--- a/untitled/templates/index.html
+++ b/untitled/templates/index.html
@@ -21,7 +21,7 @@
     <link href="{%  static 'vendor/simple-line-icons/css/simple-line-icons.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/resume.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/resume.css' %}" rel="stylesheet">
 
   </head>
 
