--- a/untitled/templates/index.html
+++ b/untitled/templates/index.html
@@ -110,9 +110,9 @@
               <h3 class="mb-0">Computer Vision Freelancer</h3>
               <p>Developed products for industry computer vision use cases. Product domains range from customer analytics to augmented reality based systems.
               </p>
-                <p>Key Work Areas:<br/>
+                <p><b>Key Work Areas:</b><br/>
                     Image based Sentiment Analysis | Object measurement using Image processing | Object tracking systems | Realtime object detection over web</p>
-                <p> Tech Stack<br/>
+                <p><b>Tech Stack</b><br/>
 
                     Worked extensively with OpenCV DNN | Tensorflow and tflearn | darkflow and darknet | object tracking with camshift, correlation, optical flow, IOU tracking etc | C++ Simple Web Sockets | JSFeat, js image processing libraries  </p>
             </div>
@@ -127,9 +127,9 @@
               <div class="subheading mb-3">Cognitive Machines</div>
                 <p>Worked as an integral part of multiple projects in Computer Vision. I was tasked with a major portion of Machine Learning based algorithm development.</p>
                 <p>
-                    Key Work Areas:<br/>
+                    <b>Key Work Areas:</b><br/>
                     Deep learning based Object Detection | Machine Learning Metric Development | Inference optimization on various platforms | Vision pipelines for Object Detection
-                </p><p>Tech Stack: <br/>
+                </p><p><b>Tech Stack:</b> <br/>
                   AWS ( S3, SageMaker, CodeBuild, EC2, CodePipeline, AWS ECS, Lambda ) | Tensorflow | OpenCV dnn module in C++ and python | OpenCV tracking contrib modules | Metabase for report logging | Android C++ NDK for dnn inference | Kinect SDK | Random Forest Inference for Kinect Skeletal tracking | Websockets in Tornado | SSD; YOLO; TensorBox training and inference pipelines.   </p>
             </div>
             <div class="resume-date text-md-right">
@@ -146,11 +146,11 @@ Social Innovator at TCS Foundation's Digital Impact Square in collaboration with
 
                   At DISQ, I was a founding member at Team Signify- Creating a system to provide free communication and a voice to the deaf and dumb community. </p>
 <p>
-Key work areas:<br/>
+    <b>Key work areas:</b><br/>
 Field Research | Impact Assessment | Prototype development and Validation | Assistive Technology
 </p>
                 <p>
-                    Tech Stack:<br/>
+                    <b>Tech Stack:</b><br/>
 Django | NLTK | TextBlob | MoviePy | Speech processing
 </p>
             </div>
@@ -163,7 +163,16 @@ Django | NLTK | TextBlob | MoviePy | Speech processing
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Intern</h3>
               <div class="subheading mb-3">Manipal Institute of Technology Practice School</div>
-                <p></p>
+                <p>
+MIT Practice school offers faculty-driven research based opportunities to their final semester students.
+
+I worked with a team of 3 under the guidance of Dr. T. K. Padma Shri on Sign Language classification using Computer Vision
+                </p>
+                <p><b>Key work areas:</b><br/>
+Supervised Learning | Optimization | Validation and Testing | Comparative analysis | Kinect API | Data Visualization
+                </p>
+                <p><b>Tech Stack:</b><br/>
+MATLAB | Kinect API | Neural Network Toolbox | MATLAB GUI</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">January 2015 - June 2016</span>
@@ -270,7 +279,7 @@ Django | NLTK | TextBlob | MoviePy | Speech processing
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
-            <ul>
+          <ul class="fa-ul mb-0">
                   <li>
               <i class="fa-li fa fa-android"></i>
                     Poly - Context based language learning app
