Update multiple sections

--- a/untitled/templates/index.html
+++ b/untitled/templates/index.html
@@ -112,7 +112,7 @@
               </p>
                 <p><b>Key Work Areas:</b><br/>
                     Image based Sentiment Analysis | Object measurement using Image processing | Object tracking systems | Realtime object detection over web</p>
-                <p><b>Tech Stack</b><br/>
+                <p><b>Tech Stack:</b><br/>
 
                     Worked extensively with OpenCV DNN | Tensorflow and tflearn | darkflow and darknet | object tracking with camshift, correlation, optical flow, IOU tracking etc | C++ Simple Web Sockets | JSFeat, js image processing libraries  </p>
             </div>
@@ -282,18 +282,19 @@ MATLAB | Kinect API | Neural Network Toolbox | MATLAB GUI</p>
           <ul class="fa-ul mb-0">
                   <li>
               <i class="fa-li fa fa-android"></i>
-                    Poly - Context based language learning app
+                      <b>Poly - Context based language learning app</b>
                       <p>Uses computer vision object detection algorithms to identify objects in current view and helps learn words in different languages for them. These words can also be used to learn relevant context based sentences.</p>
                   </li>
                  <li>
               <i class="fa-li fa fa-facebook"></i>
-                     HungerHero - Chatbot based social benefit food delivery platform
+                     <b>HungerHero - Chatbot based social benefit food delivery platform</b>
                      <p>A facebook based chat platform paired with a realtime backend to collect extra food from people and deliver it to HungerHero food partners, who then distribute it to the needy</p>
                   </li>
-{#                 <li>#}
-{#              <i class="fa-li fa fa-arrow-right"></i>#}
-{#                     #}
-{#                  </li>#}
+                 <li>
+              <i class="fa-li fa fa-chrome"></i>
+                    <b>WebRTC based client side Image Processing Application</b>
+                     <p>A Web application built on OpenCV js running completely client side to process video streams and perform a multitude of image processing operations on them</p>
+                  </li>
 
 
             </ul>
